fix ticket header alignment fixed....

--- a/assets/css/agent-customer.css
+++ b/assets/css/agent-customer.css
@@ -704,7 +704,7 @@ body {
 
 .model-header-text {
     display: inline-block;
-    font-size: 20px;
+    font-size: 16px;
     padding-left: 15px;
     color: #0d1c33;
     overflow: hidden;
